[package]
name = "rwa-analytics"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
publish = true
description = "Real World Assets Analytics"
readme = "README.md"
license = "MIT"
repository = "https://github.com/epappas/rwa-analytics"
homepage = "https://github.com/epappas/rwa-analytics"
documentation = "https://github.com/epappas/rwa-analytics"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
categories = ["finance", "cryptography::cryptocurrencies", "api-bindings"]
keywords = ["rwa", "analytics", "blockchain", "finance", "cryptocurrencies"]

[workspace]


[dependencies]
async-trait = "0.1.77"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
web3 = "0.19.0"

[dev-dependencies]
# For examples
env_logger = "0.11"
hex-literal = "0.4"
wiremock = "0.6.0"
